0.30 04 Jan 2017 
 - Specify minumum perl version (PR #137)
 - Update RestXmlCaller.pm to fix malformed xml schema issues (PR #133)
 - Don't trim values coming from APIs (Issue #130)
 - New API: CUR (AWS Cost and Usage Report Service) 
 - New API: CloudDirectory 
 - CodeDeploy API update: IamSessionArn, IamUserArn, BlueGreen deployments
 - ECS API update: Attributes and Placement constraints
 - RDS API update: create Aurora read replica of an RDS
 - DynamoDB API update: Tagging for DynamoDB
 - ACM API update
 - EC2 API update
 - CodeCommit API update
 - ELBv2 API update
 - ECS API update 
 - EC2 API update

0.29 27 Dec 2016
 - New functionality: Enabled and documented paginators (methods that repeatedly call methods that 
   return partial responses)
 - Remove under work warning from JSON-REST services: ApiGateway,CloudSearchDomain,CognitoSync,
   EFS, ES, ElasticTranscoder, Glacier, IoT, IoTData, Lambda
   This means that Bugs and error reports for these APIs will be handled with priority, as they
   would are considered to be functional
 - Fixed documentation issues with S3, CloudFront and Route53 (ilmari)
 - Fixed bug (Issue #108): Services that expected strings as parameters would accept numbers,
   Method(StringParameter => 33), and Paws would generate "StringParameter":33 in the request
   to the service, but the AWS API would error out, forcing the programmer to stringify his input
   Method(StringParameter => "33"). Paws will now auto-stringify the contents in these parameters
   so AWS will accept them correctly, and the programmer doesn't have to worry about stringifying
   his inputs. Thanks to ilmari and rpcme
 - Fixed Bug (Issue #107): Some services transmit undef as a valid value in an Array of things (rpcme)
 - Support for S3 is now much better. Multipart uploads are working (glenveegee)
 - Don't depend on Crypt::Digest::SHA256. Use Digest::SHA (Grinzz)
 - New API: Budgets
 - New API: SMS (Server Migration Service)
 - New API: AWS Polly